--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -406,11 +406,15 @@ select {
   padding-bottom: 15px;
 }
 .promo .overview {
-  margin-top: 60px;
+  margin-top: 20px;
   padding-left: 30px;
   padding-right: 30px;
 }
+.promo .overview pre {
+  text-align:left;
+}
 .promo .overview h2 {
+  text-align:center;
   font-size: 30px;
   margin-bottom: 35px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
@@ -723,7 +727,7 @@ select {
 }
 /* ======= Features Section ======= */
 .features {
-  padding: 80px 0;
+  padding: 30px 0;
 }
 .features .icon {
   position: relative;
@@ -1259,7 +1263,7 @@ select {
 }
 .modal .modal-header {
   border-bottom: none;
-  padding-bottom: 30px;
+  /*padding-bottom: 30px;*/
 }
 .modal .modal-title {
   color: #286da8;
