--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -416,7 +416,8 @@ select {
 .promo .overview h2 {
   text-align:center;
   font-size: 30px;
-  margin-bottom: 35px;
+  margin-bottom: 50px;
+  margin-top:50px;
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.3);
 }
 .promo .overview .summary {
@@ -727,7 +728,7 @@ select {
 }
 /* ======= Features Section ======= */
 .features {
-  padding: 30px 0;
+  padding: 100px 0;
 }
 .features .icon {
   position: relative;
@@ -904,7 +905,7 @@ select {
 .story {
   background-color: #286da8;
   color: #fff;
-  padding: 40px 0;
+  padding: 100px 0;
 }
 .story .content .title {
   margin-bottom: 30px;
